use newFixedThreadPool instead of virtual threads